force-app/main/default/objects/F_tms_Bill_Transaction__c/F_tms_Bill_Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction (PO)</label>
    <nameField>
        <displayFormat>TPO-{0000}</displayFormat>
        <label>Transaction(PO)</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>