force-app/main/default/objects/F_tms_Bill_Transaction__c/fields/Amount_VND__c.field-meta.xml
<CustomField>
    <fullName>Amount_VND__c</fullName>
    <label>Amount (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>