force-app/main/default/objects/F_tms_Bill_Transaction__c/fields/Buying_Cost__c.field-meta.xml
<CustomField>
    <fullName>Buying_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Cost</label>
    <referenceTo>Buying_Cost__c</referenceTo>
    <relationshipLabel>Transaction (PO)</relationshipLabel>
    <relationshipName>Transaction_PO</relationshipName>
    <type>Lookup</type>
</CustomField>