force-app/main/default/objects/F_tms_Bill_Transaction__c/fields/Outbound_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Transaction__c</fullName>
    <label>Outbound Transaction</label>
    <referenceTo>OutboundTransaction__c</referenceTo>
    <relationshipLabel>Transaction (PO)</relationshipLabel>
    <relationshipName>Transaction_PO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>