force-app/main/default/objects/F_tms_Bill_Transaction__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Transaction (PO)</relationshipLabel>
    <relationshipName>Transaction_PO</relationshipName>
    <type>Lookup</type>
</CustomField>