force-app/main/default/objects/F_tms_Bill_Transaction__c/fields/Total_Convert_to_CNY__c.field-meta.xml
<CustomField>
    <fullName>Total_Convert_to_CNY__c</fullName>
    <label>Total Convert to CNY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>